--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,30 +20,32 @@ name = "sk"
 path = "src/bin/main.rs"
 
 [dependencies]
-nix = "0.23.0"
-atty = "0.2.14"
-regex = "1.5.5"
-lazy_static = "1.3.0"
-shlex = "0.1.1"
-unicode-width = "0.1.4"
-log = "0.4.6"
-env_logger = "0.8.2"
-time = "0.2.23"
-clap = "2.26.2"
-tuikit = "0.4.5"
-vte = "0.9.0"
+nix = "0.25.0"
+atty = { version = "0.2.14", optional = true }
+regex = "1.6.0"
+lazy_static = "1.4.0"
+shlex = { version = "1.1.0", optional = true }
+unicode-width = "0.1.9"
+log = "0.4.17"
+env_logger = { version = "0.9.0", optional = true }
+time = "0.3.13"
+clap = { version = "3.2.22", optional = true, features = ["cargo"] }
+tuikit = "0.5.0"
+vte = "0.11.0"
 fuzzy-matcher = "0.3.7"
-rayon = "1.0.3"
-derive_builder = "0.9"
-bitflags = "1.0.4"
+rayon = "1.5.3"
+derive_builder = "0.11.2"
+bitflags = "1.3.2"
 timer = "0.2.0"
-chrono = "0.4"
-crossbeam = "0.8.0"
-beef = "0.5.0" # compact cow
-defer-drop = "1.0.1"
+chrono = "0.4.22"
+crossbeam = "0.8.2"
+beef = "0.5.2" # compact cow
+defer-drop = "1.2.0"
+once_cell = { version = "1.16.0", default-features = false }
 
 [features]
-default = []
+default = ["cli"]
+cli = ["dep:clap", "dep:atty", "dep:shlex", "dep:env_logger"]
 
 [profile.release]
 lto = true
