--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ time = "0.3.13"
 clap = { version = "3.2.22", optional = true, features = ["cargo"] }
 tuikit = "0.4.6"
 vte = "0.11.0"
-fuzzy-matcher = "0.3.7"
+fuzzy-matcher = { git = "https://github.com/tomkwok/fuzzy-matcher" }
 rayon = "1.5.3"
 derive_builder = "0.12.0"
 bitflags = "1.3.2"
