--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,8 +49,7 @@ default = ["cli"]
 cli = ["dep:clap", "dep:atty", "dep:shlex", "dep:env_logger"]
 
 [profile.release]
-opt-level = 3
 strip = true
 lto = true
-debug = false
 codegen-units = 1
+panic = "abort"
