--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ path = "src/bin/main.rs"
 [dependencies]
 nix = "0.24.3"
 atty = { version = "0.2.14", optional = true }
-regex = "1.6.0"
+regex = { version = "0.1.0", package = "regex-lite" }
 lazy_static = "1.4.0"
 shlex = { version = "1.1.0", optional = true }
 unicode-width = "0.1.9"
