--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -42,7 +42,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        build: [linux, linux-arm, linux-arm-v7, linux-aarch64, macos, macos-aarch64]
+        build: [linux, linux-arm, linux-arm-v7, linux-aarch64, linux-mips, macos, macos-aarch64]
         include:
         - build: linux
           os: ubuntu-latest
@@ -63,6 +63,11 @@ jobs:
           os: ubuntu-latest
           rust: stable
           target: aarch64-unknown-linux-gnu
+          cross: true
+        - build: linux-mips
+          os: ubuntu-latest
+          rust: stable
+          target: mips-unknown-linux-musl
           cross: true
         - build: macos
           os: macos-latest
@@ -102,7 +107,7 @@ jobs:
         echo "RELEASE_VERSION=$release_version" >> $GITHUB_ENV
         echo "release version: $RELEASE_VERSION"
 
-    - name: build
+    - name: cargo build
       uses: actions-rs/cargo@v1
       with:
         use-cross: ${{ matrix.cross }}
