--- a/.github/workflows/crates.yml
+++ b/.github/workflows/crates.yml
@@ -10,18 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         fetch-depth: 1
-    - name: Install correct toolchain
-      uses: actions-rs/toolchain@v1
+    - name: Install rust toolchain
+      uses: dtolnay/rust-toolchain@master
       with:
         toolchain: stable
-        override: true
     - name: Run cargo check
-      uses: actions-rs/cargo@v1
-      with:
-        command: check
+      run: cargo check
     - name: Login crates.io
       run: cargo login ${CRATES_IO_TOKEN}
       env:
