--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -43,54 +43,46 @@ jobs:
     strategy:
       matrix:
         build: [linux, linux-arm, linux-arm-v7, linux-aarch64, linux-mips, macos, macos-aarch64]
+        rust: [stable]
         include:
         - build: linux
           os: ubuntu-latest
-          rust: stable
           target: x86_64-unknown-linux-gnu
           cross: false
         - build: linux-arm
           os: ubuntu-latest
-          rust: stable
           target: arm-unknown-linux-gnueabihf
           cross: true
         - build: linux-arm-v7
           os: ubuntu-latest
-          rust: stable
           target: armv7-unknown-linux-gnueabihf
           cross: true
         - build: linux-aarch64
           os: ubuntu-latest
-          rust: stable
           target: aarch64-unknown-linux-gnu
           cross: true
         - build: linux-mips
           os: ubuntu-latest
-          rust: stable
           target: mips-unknown-linux-musl
           cross: true
         - build: macos
           os: macos-latest
-          rust: stable
           target: x86_64-apple-darwin
           cross: false
         - build: macos-aarch64
           os: macos-latest
-          rust: stable
           target: aarch64-apple-darwin
           cross: true
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         fetch-depth: 1
-    - name: Install correct toolchain
-      uses: actions-rs/toolchain@v1
+    - name: Install rust toolchain
+      uses: dtolnay/rust-toolchain@master
       with:
         toolchain: ${{ matrix.rust }}
-        target: ${{ matrix.target }}
-        use-cross: ${{ matrix.cross }}
-        override: true
+        targets: ${{ matrix.target }}
 
     - name: Get release download URL
       uses: actions/download-artifact@v1
@@ -107,12 +99,16 @@ jobs:
         echo "RELEASE_VERSION=$release_version" >> $GITHUB_ENV
         echo "release version: $RELEASE_VERSION"
 
-    - name: cargo build
-      uses: actions-rs/cargo@v1
-      with:
-        use-cross: ${{ matrix.cross }}
-        command: build
-        args: --release --target ${{ matrix.target }}
+    - name: Run cargo build
+      run: cargo build --release --target ${{ matrix.target }}
+      if: ${{ !matrix.cross }}
+
+    - name: Run cross build
+      run: |
+        cargo install cross
+        cross build --release --target ${{ matrix.target }}
+      if: ${{ matrix.cross }}
+
     - name: Package Artifacts
       run: |
         src=$(pwd)
