--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   create-release:
-    name: Create Github Release
+    name: Create Release
     runs-on: ubuntu-latest
     steps:
     - name: Create artifacts directory
@@ -31,13 +31,13 @@ jobs:
     - name: Save version number to artifact
       run: echo "${{ env.SK_VERSION }}" > artifacts/release-version
     - name: Upload artifacts
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v3
       with:
         name: artifacts
         path: artifacts
 
-  publish-to-github:
-    name: Publish to Github
+  publish:
+    name: Publish
     needs: ['create-release']
     runs-on: ${{matrix.os}}
     strategy:
@@ -72,7 +72,7 @@ jobs:
         - build: macos-aarch64
           os: macos-latest
           target: aarch64-apple-darwin
-          cross: true
+          cross: false
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
@@ -85,7 +85,7 @@ jobs:
         targets: ${{ matrix.target }}
 
     - name: Get release download URL
-      uses: actions/download-artifact@v1
+      uses: actions/download-artifact@v3
       with:
         name: artifacts
         path: artifacts
