--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,11 +27,11 @@ lazy_static = "1.4.0"
 shlex = { version = "1.1.0", optional = true }
 unicode-width = "0.1.9"
 log = "0.4.17"
-env_logger = { version = "0.9.0", optional = true, default-features = false, features = ["termcolor", "atty"] }
+env_logger = { version = "0.10.0", optional = true, default-features = false }
 time = "0.3.13"
 clap = { version = "3.2.22", optional = true, features = ["cargo"] }
 tuikit = "0.4.6"
-vte = "0.11.0"
+vte = "0.13.0"
 fuzzy-matcher = { git = "https://github.com/tomkwok/fuzzy-matcher" }
 rayon = "1.5.3"
 derive_builder = "0.12.0"
