use tag as release version

--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -14,7 +14,7 @@ jobs:
       run: mkdir artifacts
     - name: Get the release version from the tag
       run: |
-        echo "SK_VERSION=${GITHUB_SHA::7}" >> $GITHUB_ENV
+        echo "SK_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
     - name: Create Release
       id: release
       uses: actions/create-release@v1
