--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -42,7 +42,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        build: [linux, linux-arm, linux-arm-v7, linux-aarch64, linux-mips, macos, macos-aarch64]
+        build: [linux, linux-arm, linux-arm-v7, linux-aarch64, macos, macos-aarch64]
         rust: [stable]
         include:
         - build: linux
@@ -60,10 +60,6 @@ jobs:
         - build: linux-aarch64
           os: ubuntu-latest
           target: aarch64-unknown-linux-gnu
-          cross: true
-        - build: linux-mips
-          os: ubuntu-latest
-          target: mips-unknown-linux-musl
           cross: true
         - build: macos
           os: macos-latest
