--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ path = "src/bin/main.rs"
 
 [dependencies]
 nix = { version = "0.24.3", default-features = false }
-atty = { version = "0.2.14", optional = true }
+# atty = { version = "0.2.14", optional = true }
 regex = { version = "0.1.0", package = "regex-lite" }
 lazy_static = "1.4.0"
 shlex = { version = "1.3.0", optional = true }
@@ -46,7 +46,7 @@ once_cell = { version = "1.16.0", default-features = false }
 
 [features]
 default = ["cli"]
-cli = ["dep:clap", "dep:atty", "dep:shlex", "dep:env_logger"]
+cli = ["dep:clap", "dep:shlex", "dep:env_logger"]
 
 [profile.release]
 strip = true
